# rrclaw

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  README.zh-CN.md  config.example.yaml  config.yaml  deploy.sh  pyproject.toml  rragent_server.py  rrclaw_server.py  run_p0.py  run_p1.py  run_p2.py  run_p3.py  test_p1.py
bridge/: __init__.py  __main__.py  gateway_client.py  hermes_runtime.py  memory_bridge.py  protocol.py  redis_broker.py  server.py  skill_bridge.py
deploy/: Dockerfile  com.hermes-bridge.plist  docker-compose.yaml  hermes-bridge.service
hermes/: __init__.py  openclaw_bridge_server.py
hermes/tools/: __init__.py  openclaw_skills.py  openclaw_tools.py
openclaw/: __init__.py
openclaw/agents/: app_config.py  base.py  bridge_client.py  orchestrator.py  system_commands.py
rragent/: __init__.py  __main__.py
rragent/channels/: acp_runtime.py  gateway.py  webhook.py
rragent/commands/: evolve.py  research.py
rragent/context/: engine.py
rragent/context/memory/: tier1_session.py  tier2_user.py  tier3_system.py
rragent/data_sources/: reachrich_stream.py
rragent/evolution/: autoresearch_loop.py  background_review.py  engine.py  failure_detector.py  gepa_pipeline.py  perf_detector.py  skill_creator.py  skill_guard.py
rragent/permissions/: enforcer.py  policy.py
rragent/runtime/: config.py  conversation.py  hooks.py  prompt.py  server.py  session.py
rragent/runtime/providers/: anthropic.py  base.py  credential_pool.py  dashscope.py  openai_compat.py  router.py  simple.py
rragent/runtime/resilience/: api_retry.py  circuit_breaker.py  health_monitor.py  recovery_recipes.py
rragent/skills/: executor.py  loader.py  sync.py
rragent/tools/: base.py  executor.py  index_builder.py  registry.py  search.py
rragent/tools/builtin/: bash.py  canvas.py  factor_tools.py  file_ops.py  market_query.py
rragent/tools/hermes/: runtime.py
rragent/tools/mcp/: client.py  reachrich_server.py  server.py
rragent/tools/pyagent/: bridge.py
rragent/workers/: boot.py  coordinator.py  task_packet.py
rrclaw/: __main__.py
rrclaw/channels/: acp_runtime.py  gateway.py  webhook.py
rrclaw/commands/: evolve.py  research.py
rrclaw/context/: engine.py
rrclaw/context/memory/: tier2_user.py  tier3_system.py
rrclaw/data_sources/: reachrich_stream.py
rrclaw/evolution/: autoresearch_loop.py  background_review.py  correction_tracker.py  engine.py  failure_detector.py  gepa_pipeline.py  pattern_detector.py  perf_detector.py  skill_creator.py
rrclaw/permissions/: enforcer.py
rrclaw/runtime/: config.py  conversation.py  hooks.py  prompt.py  server.py  session.py
rrclaw/runtime/providers/: anthropic.py  dashscope.py  openai_compat.py  router.py  simple.py
rrclaw/runtime/resilience/: api_retry.py  circuit_breaker.py  error_classifier.py  health_monitor.py  recovery_recipes.py
rrclaw/skills/: executor.py  loader.py  sync.py
rrclaw/tools/: executor.py  index_builder.py  registry.py  search.py
rrclaw/tools/builtin/: bash.py  canvas.py  factor_tools.py  file_ops.py  market_query.py
rrclaw/tools/hermes/: runtime.py
rrclaw/tools/mcp/: client.py  reachrich_server.py  server.py
rrclaw/tools/pyagent/: bridge.py
rrclaw/workers/: boot.py  coordinator.py
skills/hermes-bridge/: SKILL.md
static/: index.html
static/js/: 01-core.jsx  02-nav.jsx  03-dashboard.jsx  04-chat.jsx  05-market.jsx  06-quant.jsx  07-tools.jsx  08-system.jsx  09-app.jsx  10-autoresearch.jsx  11-meme.jsx  11-yao.jsx
tests/: test_channels.py  test_e2e_user_flow.py  test_reachrich_stream.py
toolsets/: __init__.py  openclaw_toolset.py
