[project]
name = "hermes-openclaw-bridge"
version = "0.1.0"
description = "Bidirectional bridge between Hermes AI Agent and OpenClaw Gateway"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "pagliazi"},
]
keywords = [
    "ai-agents",
    "multi-agent",
    "hermes-agent",
    "openclaw",
    "redis",
    "bridge",
    "tool-calling",
    "agentic-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "redis>=5.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
hermes-openclaw-bridge = "bridge.server:main"

[project.urls]
Homepage = "https://github.com/pagliazi/hermes-openclaw-bridge"
Repository = "https://github.com/pagliazi/hermes-openclaw-bridge"
Issues = "https://github.com/pagliazi/hermes-openclaw-bridge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
